@@ -7,10 +7,6 @@ plugins {
 
 testing {
     suites {
-        test {
-            useJUnitJupiter()
-        }
-
         unitTest(JvmTestSuite) {
             dependencies {
                 implementation project()
@@ -22,6 +18,29 @@ testing {
                 implementation project()
             }
         }
+    }
+}
+
+tasks.withType(Test).configureEach {
+    workingDir = new File(projectDir, "run/test/${name}")
+
+    jvmArgs += ['-Xms256M', '-Xmx512M',
+                '-server',
+                '-XX:+UnlockExperimentalVMOptions', '-XX:+UnlockDiagnosticVMOptions',
+                '-XX:+UseParallelGC', '-XX:+DisableExplicitGC', '-XX:-UseGCOverheadLimit',
+                '-XX:+TieredCompilation', '-XX:CompileThreshold=500', '-XX:MaxInlineSize=64',
+                '-XX:+UseCompressedOops', '-XX:+UseStringDeduplication', '-XX:+OptimizeStringConcat',
+                '-XX:+AlwaysPreTouch',
+                '-XX:+CrashOnOutOfMemoryError', '-XX:+HeapDumpOnOutOfMemoryError',
+                '-Dsun.stdout.encoding=UTF-8', '-Dsun.stderr.encoding=UTF-8']
+    if (!javaVersion.isCompatibleWith(JavaVersion.VERSION_1_8)) {
+        jvmArgs += '-XX:+TieredCompilation'
+    }
+    if (!javaVersion.isCompatibleWith(JavaVersion.VERSION_1_9)) {
+        jvmArgs += '-XX:+UseFastAccessorMethods'
+    }
+    if (!javaVersion.isCompatibleWith(JavaVersion.VERSION_13)) {
+        jvmArgs += '-XX:+AggressiveOpts'
     }
 }
 
